--- a/userform.html
+++ b/userform.html
@@ -1,80 +1,70 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-      crossorigin="anonymous"
-    />
-    <!-- <link href="CSS/styles.css" rel="stylesheet" type="text/css" /> -->
-    <script src="https://www.gstatic.com/firebasejs/5.7.3/firebase.js"></script>
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.js"
-      integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-      crossorigin="anonymous"
-    ></script>
 
-    <script src="JS/scripts.js"></script>
-    <title>ONLINE LIBRARY</title>
-  </head>
-  <body>
-    <div class="container">
-      <h1>User booking form</h1>
+<head>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+    crossorigin="anonymous" />
+  <link href="styles.css" rel="stylesheet" type="text/css" />
+  <script src="https://www.gstatic.com/firebasejs/5.7.3/firebase.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+    crossorigin="anonymous"></script>
 
-      <div class="row">
-        <div class="col-md-6">
-          <h2>fill out this form:</h2>
-          <form id="new-contact">
-            <div class="form-group">
-              <label for="new-first-name">First name</label>
-              <input type="text" class="form-control" id="new-first-name" />
-            </div>
-            <div class="form-group">
-              <label for="new-last-name">Last name</label>
-              <input type="text" class="form-control" id="new-last-name" />
-            </div>
+  <script src="JS/scripts.js"></script>
+  <title>ONLINE LIBRARY</title>
+</head>
 
-            <div id="new-addresses">
-              <div class="new-address">
-                <div class="form-group">
-                  <label for="new-email">email</label>
-                  <input type="text" class="form-control new-email" />
-                </div>
-                <div class="form-group">
-                  <label for="new-phoneNumber">phone Number</label>
-                  <input type="text" class="form-control new-phoneNumber" />
-                </div>
-                <div class="form-group">
-                  <label for="new-id">ID</label>
-                  <input
-                    type="number"
-                    length="16"
-                    class="form-control new-id"
-                  />
-                </div>
+<body>
+  <div class="container">
+    <h1>User booking form</h1>
+
+    <div class="row">
+      <div class="col-md-6">
+        <h2>fill out this form:</h2>
+        <form id="new-contact">
+          <div class="form-group">
+            <label for="new-first-name">First name</label>
+            <input type="text" class="form-control" id="new-first-name" />
+          </div>
+          <div class="form-group">
+            <label for="new-last-name">Last name</label>
+            <input type="text" class="form-control" id="new-last-name" />
+          </div>
+
+          <div id="new-addresses">
+            <div class="new-address">
+              <div class="form-group">
+                <label for="new-email">email</label>
+                <input type="text" class="form-control new-email" />
+              </div>
+              <div class="form-group">
+                <label for="new-phoneNumber">phone Number</label>
+                <input type="text" class="form-control new-phoneNumber" />
+              </div>
+              <div class="form-group">
+                <label for="new-id">ID</label>
+                <input type="number" length="16" class="form-control new-id" />
               </div>
             </div>
-            <span class="btn btn-primary" id="add-address"
-              >another contact</span
-            >
-            <button type="submit" class="btn">submit</button>
-          </form>
-
-          <h2>Contacts:</h2>
-          <ul id="contacts"></ul>
-        </div>
-
-        <div class="col-md-6">
-          <div id="show-contact">
-            <h2></h2>
-            <p>First name: <span class="first-name"></span></p>
-            <p>Last name: <span class="last-name"></span></p>
-            <p>Addresses:</p>
-            <ul id="addresses"></ul>
           </div>
+          <span class="btn btn-primary" id="add-address">another contact</span>
+          <button type="submit" class="btn">submit</button>
+        </form>
+
+        <h2>Contacts:</h2>
+        <ul id="contacts"></ul>
+      </div>
+
+      <div class="col-md-6">
+        <div id="show-contact">
+          <h2></h2>
+          <p>First name: <span class="first-name"></span></p>
+          <p>Last name: <span class="last-name"></span></p>
+          <p>Addresses:</p>
+          <ul id="addresses"></ul>
         </div>
       </div>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
