--- a/userform.html
+++ b/userform.html
@@ -4,7 +4,7 @@
 <head>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
     crossorigin="anonymous" />
-  <link href="CSS/styles.css" rel="stylesheet" type="text/css" />
+
   <script src="https://www.gstatic.com/firebasejs/5.7.3/firebase.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
     crossorigin="anonymous"></script>
@@ -15,11 +15,11 @@
 
 <body>
   <div class="container">
-    <h1>User booking form</h1>
+    <h1>User Booking Form</h1>
 
     <div class="row">
       <div class="col-md-6">
-        <h2>fill out this form:</h2>
+        <h2>Fill out this form:</h2>
         <form id="new-contact">
           <div class="form-group">
             <label for="new-first-name">First name</label>
