--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
 <body class="container">
   <h1> The Online Library</h1>
   <nav>
-
-
-
+    <ul>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#contacts">Contacts</a></li>
+    </ul>
   </nav>
   <h2>Hard copy Books</h2>
   <ol>
