--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
 </head>
 
 <body class="container">
-  <h1> The Online Library</h1>
-  <nav>
-    <ul>
-      <li><a href="#home">Home</a></li>
-      <li><a href="#about">About</a></li>
-      <li><a href="#contacts">Contacts</a></li>
-    </ul>
-  </nav>
+  <div id="help">
+    <nav>
+      <ul>
+
+        <li><a href="#home">The Online Library</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contacts">Contacts</a></li>
+      </ul>
+    </nav>
+  </div>
   <h2>Hard copy Books</h2>
   <ol>
     <li>
