--- a/userform.html
+++ b/userform.html
@@ -1,4 +1,82 @@
-<!DOCTYPE html>
+<!DOCTYPE <!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Adress book</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      media="screen"
+      href="css/styles.css"
+    />
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.js"
+      integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+      crossorigin="anonymous"
+    ></script>
+    <script src="JS/scripts.js"></script>
+  </head>
+  <body>
+    <div class="container">
+      <h1>Address book</h1>
+      <div class="row">
+        <div class="col-md-6">
+          <h2>Add a contact:</h2>
+          <form id="new-contact">
+            <div class="form-group">
+              <label for="new-first-name">First name</label>
+              <input type="text" class="form-control" id="new-first-name" />
+            </div>
+            <div class="form-group">
+              <label for="new-last-name">Last name</label>
+              <input type="text" class="form-control" id="new-last-name" />
+            </div>
+            <div class="form-group">
+              <label for="new-phone-number">Phone number</label>
+              <input type="text" class="form-control" id="new-phone-number" />
+            </div>
+            <div class="form-group">
+              <label for="new-e-mail">E-mail</label>
+              <input type="text" class="form-control" id="new-e-mail" />
+            </div>
+            <div class="form-group">
+              <label for="new-id">ID</label>
+              <input type="text" class="form-control" id="new-id" />
+            </div>
+
+            <button type="submit" class="btn">Submit</button>
+          </form>
+          <div id="hidden1">
+            <h2>Contacts:</h2>
+            <ul id="contacts"></ul>
+          </div>
+        </div>
+        <div class="col-md-6" id="hidden2">
+          <div id="show-contact">
+            <h2></h2>
+
+            <p>First name: <span class="first-name"></span></p>
+            <p>Last name: <span class="last-name"></span></p>
+            <p>Phone Number: <span class="phone"></span></p>
+            <p>E-mail: <span class="email"></span></p>
+            <p>ID: <span class="id"></span></p>
+          </div>
+          <h3>Contact saved</h3>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
+
+<!-- <!DOCTYPE html>
 <html>
   <head>
     <link
@@ -6,16 +84,16 @@
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
       integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
       crossorigin="anonymous"
-    />
-    <!-- <link href="CSS/styles.css" rel="stylesheet" type="text/css" /> -->
-    <script src="https://www.gstatic.com/firebasejs/5.7.3/firebase.js"></script>
+    /> -->
+<!-- <link href="CSS/styles.css" rel="stylesheet" type="text/css" /> -->
+<!-- <script src="https://www.gstatic.com/firebasejs/5.7.3/firebase.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.3.1.js"
       integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
       crossorigin="anonymous"
-    ></script>
+    ></script> -->
 
-    <script src="JS/scripts.js"></script>
+<!-- <script src="JS/scripts.js"></script>
     <title>ONLINE LIBRARY</title>
   </head>
   <body>
@@ -33,24 +111,29 @@
             <div class="form-group">
               <label for="new-last-name">Last name</label>
               <input type="text" class="form-control" id="new-last-name" />
-            </div>
+            </div> -->
 
-            <div id="new-addresses">
+<!-- <div id="new-addresses">
               <div class="new-address">
                 <div class="form-group">
                   <label for="new-email">email</label>
-                  <input type="text" class="form-control new-email" />
+                  <input type="text" class="form-control" id="new-email" />
                 </div>
                 <div class="form-group">
                   <label for="new-phoneNumber">phone Number</label>
-                  <input type="text" class="form-control new-phoneNumber" />
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="new-phoneNumber"
+                  />
                 </div>
                 <div class="form-group">
                   <label for="new-id">ID</label>
                   <input
                     type="number"
                     length="16"
-                    class="form-control new-id"
+                    class="form-control"
+                    id="new-id"
                   />
                 </div>
               </div>
@@ -58,7 +141,7 @@
             <span class="btn btn-primary" id="add-address"
               >another contact</span
             >
-            <button type="submit" class="btn">submit</button>
+            <button type="submit" id="btn">submit</button>
           </form>
 
           <h2>Contacts:</h2>
@@ -67,14 +150,21 @@
 
         <div class="col-md-6">
           <div id="show-contact">
-            <h2></h2>
-            <p>First name: <span class="first-name"></span></p>
+            <h2></h2> -->
+<!-- <p>First name: <span class="first-name"></span></p>
             <p>Last name: <span class="last-name"></span></p>
-            <p>Addresses:</p>
-            <ul id="addresses"></ul>
+            <p>Addresses:</p> -->
+<!-- <ul id="addresses"></ul>
           </div>
         </div>
+        <div id="done"> -->
+<!-- <p>
+            You are now done booking. Your book will be kept for 48 hours from
+            now, after the time provided without comming to take the book your
+            request will be canceled.
+          </p> -->
+<!-- </div>
       </div>
     </div>
   </body>
-</html>
+</html> -->
