--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body class="container">
   <div id="help">
     <nav>
+      <img src="https://previews.123rf.com/images/jovanas/jovanas1602/jovanas160201759/52212634-book-logo-sign-black.jpg">
       <ul>
         <li><a href="#home">The Online Library</a></li>
         <li><a href="#about">About</a></li>
