--- a/index.html
+++ b/index.html
@@ -21,47 +21,51 @@
       </ul>
     </nav>
   </div>
+
   <h2>Hard copy Books</h2>
-  <ol>
-    <li>
-      <img src="https://a.wattpad.com/cover/158136134-144-k416042.jpg" /><a href="userform.html"><button type="submit"
-          class="btn">Borrow</button></a>
-    </li>
-    <li>
-      <img src="https://a.wattpad.com/cover/94092427-144-k331009.jpg" /><a href="userform.html"><button type="submit"
-          class="btn">Borrow</button></a>
-    </li>
-    <li>
-      <img src="https://a.wattpad.com/cover/80720835-144-k398254.jpg" /><a href="userform.html"><button type="submit"
-          class="btn">Borrow</button></a>
-    </li>
-    <li>
-      <img src="https://a.wattpad.com/cover/110948919-144-k984829.jpg" /><a href="userform.html"><button type="submit"
-          class="btn">Borrow</button></a>
-    </li>
-    <li>
-      <img src="https://a.wattpad.com/cover/72024230-144-k234659.jpg" /><a href="userform.html"><button type="submit"
-          class="btn">Borrow</button></a>
-    </li>
-  </ol>
 
-
+  <div id="borrow">
+    <ol>
+      <li>
+        <img src="https://a.wattpad.com/cover/158136134-144-k416042.jpg" /><a href="userform.html"><button type="submit"
+            class="btn">Borrow</button></a>
+      </li>
+      <li>
+        <img src="https://a.wattpad.com/cover/94092427-144-k331009.jpg" /><a href="userform.html"><button type="submit"
+            class="btn">Borrow</button></a>
+      </li>
+      <li>
+        <img src="https://a.wattpad.com/cover/80720835-144-k398254.jpg" /><a href="userform.html"><button type="submit"
+            class="btn">Borrow</button></a>
+      </li>
+      <li>
+        <img src="https://a.wattpad.com/cover/110948919-144-k984829.jpg" /><a href="userform.html"><button type="submit"
+            class="btn">Borrow</button></a>
+      </li>
+      <li>
+        <img src="https://a.wattpad.com/cover/72024230-144-k234659.jpg" /><a href="userform.html"><button type="submit"
+            class="btn">Borrow</button></a>
+      </li>
+    </ol>
+  </div>
   <h2>Soft copy books</h2>
+
+  <div id="read"></div>
   <ol>
     <li>
-      <a href="https://www.wattpad.com/322591052-killer-romance-book-1-jeff-the-killer-x-reader-jtk"><img src="https://a.wattpad.com/cover/27982128-144-k14562.jpg" /></a>
+      <a href="https://www.wattpad.com/322591052-killer-romance-book-1-jeff-the-killer-x-reader-jtk"><img src="https://a.wattpad.com/cover/27982128-144-k14562.jpg" /><button>Read</button></a>
     </li>
     <li>
-      <a href="https://www.wattpad.com/324903145-the-blind-alpha-%E2%9C%93-wattys2018-foreword"><img src="https://a.wattpad.com/cover/87887876-144-k766556.jpg" /></a>
+      <a href="https://www.wattpad.com/324903145-the-blind-alpha-%E2%9C%93-wattys2018-foreword"><img src="https://a.wattpad.com/cover/87887876-144-k766556.jpg" /><button>Read</button></a>
     </li>
     <li>
-      <a href="https://www.wattpad.com/43768984-storm-and-silence-01-arrested-for-good-manners"><img src="https://a.wattpad.com/cover/14239335-176-k950991.jpg" /></a>
+      <a href="https://www.wattpad.com/43768984-storm-and-silence-01-arrested-for-good-manners"><img src="https://a.wattpad.com/cover/14239335-176-k950991.jpg" /><button>Read</button></a>
     </li>
     <li>
-      <a href="https://www.wattpad.com/15813976-you-don%27t-scare-me-jeff-the-killer-romance-chapter"><img src="https://a.wattpad.com/cover/5313339-352-k485572.jpg" /></a>
+      <a href="https://www.wattpad.com/15813976-you-don%27t-scare-me-jeff-the-killer-romance-chapter"><img src="https://a.wattpad.com/cover/5313339-352-k485572.jpg" /><button>Read</button></a>
     </li>
     <li>
-      <a href="https://www.wattpad.com/619035659-best-friends-forever-coming-soon-best-friends"><img src="https://a.wattpad.com/cover/158808007-352-k55061.jpg" /></a>
+      <a href="https://www.wattpad.com/619035659-best-friends-forever-coming-soon-best-friends"><img src="https://a.wattpad.com/cover/158808007-352-k55061.jpg" /><button>Read</button></a>
     </li>
   </ol>
 
