--- a/index.html
+++ b/index.html
@@ -6,77 +6,145 @@
     crossorigin="anonymous" />
   <link href="CSS/bootstrap-grid.css" rel="stylesheet" type="text/css">
   <link href="CSS/styles.css" rel="stylesheet" type="text/css">
-  <title>online library</title>
+  <title>Online library</title>
 </head>
 
-<body class="container">
+<body>
+  <div id="home">
+    <div id="help">
+      <nav>
+        <img src="https://previews.123rf.com/images/jovanas/jovanas1602/jovanas160201759/52212634-book-logo-sign-black.jpg"
+          width="200" height="80">
+        <ul>
+          <li><a href="#home">The Online Library</a></li>
+          <li><a href="#about">About Us</a></li>
+          <li><a href="#contacts">Contacts</a></li>
+        </ul>
+      </nav>
+    </div>
+    <div class="hope">
+      <h1> MANDELA PUBLIC LIBRARY</h1>
+      <p> <em>Reading is dreaming with your open eyes</em></p>
+
+    </div>
+    <div class="container">
+
+      <h2>Romance</h2>
+      <div class="books">
+        <div id="borrow">
+          <ol>
+            <li>
+              <img src="https://a.wattpad.com/cover/158136134-144-k416042.jpg" width="200" height="230" /><br><br>
+              <a href="userform.html"><button type="submit" class="btn">Borrow</button></a>
+            </li>
+            <li>
+              <img src="https://a.wattpad.com/cover/94092427-144-k331009.jpg" width="200" height="230" /><br><br>
+              <a href="userform.html"><button type="submit" class="btn">Borrow</button></a>
+            </li>
+            <li>
+              <img src="https://a.wattpad.com/cover/80720835-144-k398254.jpg" width="200" height="230" /><br><br>
+              <a href="userform.html"><button type="submit" class="btn">Borrow</button></a>
+            </li>
+            <li>
+              <img src="https://a.wattpad.com/cover/110948919-144-k984829.jpg" width="200" height="230" /><br><br>
+              <a href="userform.html"><button type="submit" class="btn">Borrow</button></a>
+            </li>
+            <li>
+              <img src="https://a.wattpad.com/cover/72024230-144-k234659.jpg" width="200" height="230" /><br><br>
+              <a href="userform.html"><button type="submit" class="btn">Borrow</button></a>
+            </li>
+          </ol>
+        </div>
+        <h2>Horror</h2>
+
+        <div id="read"></div>
+        <ol>
+          <li>
+            <a href="https://www.wattpad.com/322591052-killer-romance-book-1-jeff-the-killer-x-reader-jtk">
+              <img src="https://a.wattpad.com/cover/27982128-144-k14562.jpg" width="200" height="230" /><br><br>
+              <button>Read</button></a>
+          </li>
+          <li>
+            <a href="https://www.wattpad.com/324903145-the-blind-alpha-%E2%9C%93-wattys2018-foreword">
+              <img src="https://a.wattpad.com/cover/87887876-144-k766556.jpg" width="200" height="230" /><br><br>
+              <button>Read</button></a>
+          </li>
+          <li>
+            <a href="https://www.wattpad.com/43768984-storm-and-silence-01-arrested-for-good-manners">
+              <img src="https://a.wattpad.com/cover/14239335-176-k950991.jpg" width="200" height="230" /><br><br>
+              <button>Read</button></a>
+          </li>
+          <li>
+            <a href="https://www.wattpad.com/15813976-you-don%27t-scare-me-jeff-the-killer-romance-chapter">
+              <img src="https://a.wattpad.com/cover/5313339-352-k485572.jpg" width="200" height="230" /><br><br>
+              <button>Read</button></a>
+          </li>
+          <li>
+            <a href="https://www.wattpad.com/619035659-best-friends-forever-coming-soon-best-friends"><img src="https://a.wattpad.com/cover/158808007-352-k55061.jpg"
+                width="200" height="230" /><br><br><button>Read</button></a>
+          </li>
+        </ol>
+      </div>
+      <div id="read">
+        <ol>
+          <li>
+            <a href="https://www.wattpad.com/322591052-killer-romance-book-1-jeff-the-killer-x-reader-jtk">
+              <img src="https://a.wattpad.com/cover/27982128-144-k14562.jpg" width="200" height="230" /><br><br>
+              <button>Read</button></a>
+          </li>
+          <li>
+            <a href="https://www.wattpad.com/324903145-the-blind-alpha-%E2%9C%93-wattys2018-foreword">
+              <img src="https://a.wattpad.com/cover/87887876-144-k766556.jpg" width="200" height="230" /><br><br>
+              <button>Read</button></a>
+          </li>
+          <li>
+            <a href="https://www.wattpad.com/43768984-storm-and-silence-01-arrested-for-good-manners">
+              <img src="https://a.wattpad.com/cover/14239335-176-k950991.jpg" width="200" height="230" /><br><br>
+              <button>Read</button></a>
+          </li>
+          <li>
+            <a href="https://www.wattpad.com/15813976-you-don%27t-scare-me-jeff-the-killer-romance-chapter">
+              <img src="https://a.wattpad.com/cover/5313339-352-k485572.jpg" width="200" height="230" /><br><br>
+              <button>Read</button></a>
+          </li>
+          <li>
+            <a href="https://www.wattpad.com/619035659-best-friends-forever-coming-soon-best-friends"><img src="https://a.wattpad.com/cover/158808007-352-k55061.jpg"
+                width="200" height="230" /><br><br><button>Read</button></a>
+          </li>
+        </ol>
+      </div>
+    </div>
+    <div id="about">
+      <h5> Welcome To the Online Library</h5>
+      <h6>Nelson Mandela always believed in education which we truly believe can be obtained through reading. Whether
+        you are commuting or at home, whether you are into short stories or addictive serials, you obtain certain
+        information that wakes or improves your way of seeing and interacting with the world,
+        We created this free online library as young readers honouring Mandela's belief and Legacy. You can find few
+        books on Mandela Public Library, but they will inspire you. "Education is the most powerful weapon which you
+        can use to change the world."
+        <ol>
+          <li> <img src="https://a.wattpad.com/cover/14239335-176-k950991.jpg" width="300" height="303" /></li>
+          <li> <img src="https://a.wattpad.com/cover/14239335-176-k950991.jpg" width="300" height="303" /></li>
+          <li> <img src="https://a.wattpad.com/cover/14239335-176-k950991.jpg" width="300" height="303" /></li>
+        </ol>
+
+      </h6>
+    </div>
+  </div>
+  <div id="contacts">
+    <h3> Needing Help</h3>
+    <p> Contact us: uwinezaandersonne@gmail.com</p>
+  </div>
   <div id="help">
     <nav>
-      <img src="https://previews.123rf.com/images/jovanas/jovanas1602/jovanas160201759/52212634-book-logo-sign-black.jpg"
-        width="200" height="80">
       <ul>
         <li><a href="#home">The Online Library</a></li>
-        <li><a href="#about">About</a></li>
+        <li><a href="#about">About Us</a></li>
         <li><a href="#contacts">Contacts</a></li>
       </ul>
     </nav>
   </div>
 
-  <h2>Hard copy Books</h2>
-  <div class="books">
-    <div id="borrow">
-      <ol>
-        <li>
-          <img src="https://a.wattpad.com/cover/158136134-144-k416042.jpg" /><br><br>
-          <a href="userform.html"><button type="submit" class="btn">Borrow</button></a>
-        </li>
-        <li>
-          <img src="https://a.wattpad.com/cover/94092427-144-k331009.jpg" /><br><br>
-          <a href="userform.html"><button type="submit" class="btn">Borrow</button></a>
-        </li>
-        <li>
-          <img src="https://a.wattpad.com/cover/80720835-144-k398254.jpg" /><br><br>
-          <a href="userform.html"><button type="submit" class="btn">Borrow</button></a>
-        </li>
-        <li>
-          <img src="https://a.wattpad.com/cover/110948919-144-k984829.jpg" /><br><br>
-          <a href="userform.html"><button type="submit" class="btn">Borrow</button></a>
-        </li>
-        <li>
-          <img src="https://a.wattpad.com/cover/72024230-144-k234659.jpg" /><br><br>
-          <a href="userform.html"><button type="submit" class="btn">Borrow</button></a>
-        </li>
-      </ol>
-    </div>
-    <h2>Soft copy books</h2>
-
-    <div id="read"></div>
-    <ol>
-      <li>
-        <a href="https://www.wattpad.com/322591052-killer-romance-book-1-jeff-the-killer-x-reader-jtk">
-          <img src="https://a.wattpad.com/cover/27982128-144-k14562.jpg" /><br><br>
-          <button>Read</button></a>
-      </li>
-      <li>
-        <a href="https://www.wattpad.com/324903145-the-blind-alpha-%E2%9C%93-wattys2018-foreword">
-          <img src="https://a.wattpad.com/cover/87887876-144-k766556.jpg" /><br><br>
-          <button>Read</button></a>
-      </li>
-      <li>
-        <a href="https://www.wattpad.com/43768984-storm-and-silence-01-arrested-for-good-manners">
-          <img src="https://a.wattpad.com/cover/14239335-176-k950991.jpg" /><br><br>
-          <button>Read</button></a>
-      </li>
-      <li>
-        <a href="https://www.wattpad.com/15813976-you-don%27t-scare-me-jeff-the-killer-romance-chapter">
-          <img src="https://a.wattpad.com/cover/5313339-352-k485572.jpg" width="200" height="230" /><br><br>
-          <button>Read</button></a>
-      </li>
-      <!-- <li>
-        <a href="https://www.wattpad.com/619035659-best-friends-forever-coming-soon-best-friends"><img src="https://a.wattpad.com/cover/158808007-352-k55061.jpg" /><button>Read</button></a>
-      </li>-->
-    </ol>
-  </div>
 </body>
 
 </html>
