--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img src="https://previews.123rf.com/images/jovanas/jovanas1602/jovanas160201759/52212634-book-logo-sign-black.jpg"
           width="200" height="80">
         <ul>
-          <li><a href="#home">The Online Library</a></li>
+          <li><a href="#books">The Online Library</a></li>
           <li><a href="#about">About Us</a></li>
           <li><a href="#contacts">Contacts</a></li>
         </ul>
@@ -29,8 +29,9 @@
     </div>
     <div class="container">
 
-      <h2>Romance</h2>
-      <div class="books">
+
+      <div id="books">
+        <h2>Romance</h2>
         <div id="borrow">
           <ol>
             <li>
@@ -38,19 +39,19 @@
               <a href="userform.html"><button type="submit" class="btn">Borrow</button></a>
             </li>
             <li>
-              <img src="https://a.wattpad.com/cover/94092427-144-k331009.jpg" width="200" height="230" /><br><br>
+              <img src="https://a.wattpad.com/cover/117749662-144-k834236.jpg" width="200" height="230" /><br><br>
               <a href="userform.html"><button type="submit" class="btn">Borrow</button></a>
             </li>
             <li>
-              <img src="https://a.wattpad.com/cover/80720835-144-k398254.jpg" width="200" height="230" /><br><br>
+              <img src="https://a.wattpad.com/cover/52298465-144-k236604.jpg" width="200" height="230" /><br><br>
               <a href="userform.html"><button type="submit" class="btn">Borrow</button></a>
             </li>
             <li>
-              <img src="https://a.wattpad.com/cover/110948919-144-k984829.jpg" width="200" height="230" /><br><br>
+              <img src="https://a.wattpad.com/cover/62645971-144-k242986.jpg" width="200" height="230" /><br><br>
               <a href="userform.html"><button type="submit" class="btn">Borrow</button></a>
             </li>
             <li>
-              <img src="https://a.wattpad.com/cover/72024230-144-k234659.jpg" width="200" height="230" /><br><br>
+              <img src="https://a.wattpad.com/cover/111367813-144-k258331.jpg" width="200" height="230" /><br><br>
               <a href="userform.html"><button type="submit" class="btn">Borrow</button></a>
             </li>
           </ol>
