--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div id="borrow">
           <ol>
             <li>
-              <img src="https://a.wattpad.com/cover/158136134-144-k416042.jpg" width="200" height="230" /><br><br>
+              <img src="https://a.wattpad.com/cover/157987003-144-k347912.jpg" width="200" height="230" /><br><br>
               <a href="userform.html"><button type="submit" class="btn">Borrow</button></a>
             </li>
             <li>
@@ -56,36 +56,38 @@
             </li>
           </ol>
         </div>
-        <h2>Horror</h2>
+        <h2>Arts & Culture</h2>
 
         <div id="read"></div>
         <ol>
           <li>
-            <a href="https://www.wattpad.com/322591052-killer-romance-book-1-jeff-the-killer-x-reader-jtk">
-              <img src="https://a.wattpad.com/cover/27982128-144-k14562.jpg" width="200" height="230" /><br><br>
+            <a href="https://sweek.com/s/AAgLAg5sCAUFBwgJAwEFB2YCCA==/Thoughtsaboutyou1234/The-Boy-Who-Failed">
+              <img src="https://1597566015.rsc.cdn77.org/v2/file/485319,1400000162" width="200" height="230" /><br><br>
               <button>Read</button></a>
           </li>
           <li>
-            <a href="https://www.wattpad.com/324903145-the-blind-alpha-%E2%9C%93-wattys2018-foreword">
-              <img src="https://a.wattpad.com/cover/87887876-144-k766556.jpg" width="200" height="230" /><br><br>
+            <a href="https://sweek.com/s/AgVsBAEDCQIHDw8NA28CBA==/Nivedhitha_Gopala_Yellapragada/Beauty-of-lands-aspiringindia">
+              <img src="https://1597566015.rsc.cdn77.org/v2/file/411791,1800328740" width="200" height="230" /><br><br>
               <button>Read</button></a>
           </li>
           <li>
-            <a href="https://www.wattpad.com/43768984-storm-and-silence-01-arrested-for-good-manners">
-              <img src="https://a.wattpad.com/cover/14239335-176-k950991.jpg" width="200" height="230" /><br><br>
+            <a href="https://sweek.com/s/AAUDagsDCQEBAgEBAwBsBAg=/pooja03/Tribute">
+              <img src="https://1597566015.rsc.cdn77.org/v2/file/21,2000459800" width="200" height="230" /><br><br>
               <button>Read</button></a>
           </li>
           <li>
-            <a href="https://www.wattpad.com/15813976-you-don%27t-scare-me-jeff-the-killer-romance-chapter">
-              <img src="https://a.wattpad.com/cover/5313339-352-k485572.jpg" width="200" height="230" /><br><br>
+            <a href="https://www.wattpad.com/story/161054781-poetry-pain">
+              <img src="https://a.wattpad.com/cover/161054781-144-k111329.jpg" width="200" height="230" /><br><br>
               <button>Read</button></a>
           </li>
           <li>
-            <a href="https://www.wattpad.com/619035659-best-friends-forever-coming-soon-best-friends"><img src="https://a.wattpad.com/cover/158808007-352-k55061.jpg"
+            <a href="https://www.wattpad.com/story/173693853-perfume-of-rose-dust-poetry"><img src="https://a.wattpad.com/cover/173693853-144-k180172.jpg"
                 width="200" height="230" /><br><br><button>Read</button></a>
           </li>
         </ol>
       </div>
+      <h2>Arts & Culture</h2>
+
       <div id="read">
         <ol>
           <li>
