--- a/index.html
+++ b/index.html
@@ -23,13 +23,11 @@
       </nav>
     </div>
     <div class="hope">
-      <h1> MANDELA PUBLIC LIBRARY</h1>
+      <h1> TEHILLAH PUBLIC LIBRARY</h1>
       <p> <em>Reading is dreaming with your open eyes</em></p>
 
     </div>
     <div class="container">
-
-
       <div id="books">
         <h2>Romance</h2>
         <div id="borrow">
@@ -57,7 +55,6 @@
           </ol>
         </div>
         <h2>Arts & Culture</h2>
-
         <div id="read"></div>
         <ol>
           <li>
@@ -86,49 +83,51 @@
           </li>
         </ol>
       </div>
-      <h2>Arts & Culture</h2>
 
+      <h2>Magic </h2>
       <div id="read">
         <ol>
           <li>
-            <a href="https://www.wattpad.com/322591052-killer-romance-book-1-jeff-the-killer-x-reader-jtk">
-              <img src="https://a.wattpad.com/cover/27982128-144-k14562.jpg" width="200" height="230" /><br><br>
+            <a href="https://www.wattpad.com/story/162740533-grounding-the-storm">
+              <img src="https://a.wattpad.com/cover/162740533-144-k769922.jpg" width="200" height="230" /><br><br>
               <button>Read</button></a>
           </li>
           <li>
-            <a href="https://www.wattpad.com/324903145-the-blind-alpha-%E2%9C%93-wattys2018-foreword">
-              <img src="https://a.wattpad.com/cover/87887876-144-k766556.jpg" width="200" height="230" /><br><br>
+            <a href="https://www.wattpad.com/story/141632409-magical-academy-the-long-lost-princess-of-magics">
+              <img src="https://a.wattpad.com/cover/141632409-144-k911137.jpg" width="200" height="230" /><br><br>
               <button>Read</button></a>
           </li>
           <li>
             <a href="https://www.wattpad.com/43768984-storm-and-silence-01-arrested-for-good-manners">
-              <img src="https://a.wattpad.com/cover/14239335-176-k950991.jpg" width="200" height="230" /><br><br>
+              <img src="https://a.wattpad.com/cover/57664404-144-k435061.jpg" width="200" height="230" /><br><br>
               <button>Read</button></a>
           </li>
           <li>
-            <a href="https://www.wattpad.com/15813976-you-don%27t-scare-me-jeff-the-killer-romance-chapter">
-              <img src="https://a.wattpad.com/cover/5313339-352-k485572.jpg" width="200" height="230" /><br><br>
+            <a href="https://https://www.wattpad.com/story/162673478-the-culled-crown">
+              <img src="https://a.wattpad.com/cover/162673478-144-k796087.jpg" width="200" height="230" /><br><br>
               <button>Read</button></a>
           </li>
           <li>
-            <a href="https://www.wattpad.com/619035659-best-friends-forever-coming-soon-best-friends"><img src="https://a.wattpad.com/cover/158808007-352-k55061.jpg"
-                width="200" height="230" /><br><br><button>Read</button></a>
+            <a href="https://www.wattpad.com/story/116876996-king-of-the-woodlands">
+              <img src="https://a.wattpad.com/cover/116876996-144-k368819.jpg" width="200" height="230" /><br><br><button>Read</button></a>
           </li>
         </ol>
       </div>
     </div>
     <div id="about">
       <h5> Welcome To the Online Library</h5>
-      <h6>Nelson Mandela always believed in education which we truly believe can be obtained through reading. Whether
-        you are commuting or at home, whether you are into short stories or addictive serials, you obtain certain
-        information that wakes or improves your way of seeing and interacting with the world,
-        We created this free online library as young readers honouring Mandela's belief and Legacy. You can find few
-        books on Mandela Public Library, but they will inspire you. "Education is the most powerful weapon which you
-        can use to change the world."
+      <h6>Here at TEHILLAH, We believe in reading is very necessary no different from the need to eat, laugh, cry or
+        jump about. Whether you are commuting or at home, whether you are into short stories or addictive serials, you
+        obtain certain
+        information that wakes or improves your way of seeing things and interacting with the world,
+        We created this free online library as young female readers who love reading and truly believe it is very
+        needed in our sociey. You can find few
+        books we gathered read or borrow them, but they will inspire you, make you laugh,scare you or giving you
+        something new to reflect about.
         <ol>
           <li> <img src="https://a.wattpad.com/cover/14239335-176-k950991.jpg" width="300" height="303" /></li>
-          <li> <img src="https://a.wattpad.com/cover/14239335-176-k950991.jpg" width="300" height="303" /></li>
-          <li> <img src="https://a.wattpad.com/cover/14239335-176-k950991.jpg" width="300" height="303" /></li>
+          <li> <img src="https://a.wattpad.com/cover/141789857-144-k775061.jpg" width="300" height="303" /></li>
+          <li> <img src="https://a.wattpad.com/cover/125945220-144-k941500.jpg" width="300" height="303" /></li>
         </ol>
 
       </h6>
